[gd_scene load_steps=27 format=3 uid="uid://cmn8cv4xlsjwe"]

[ext_resource type="Script" path="res://Scripts/Characters/Player.gd" id="1_76kdn"]
[ext_resource type="Script" path="res://Scripts/Characters/Footsteps/FootstepsHandler.gd" id="2_bwxk5"]
[ext_resource type="Script" path="res://Scenes/Prefabs/Player/Inventory.gd" id="2_c8atv"]
[ext_resource type="Texture2D" uid="uid://bxls3on0sh5hp" path="res://Assets/UI Textures/unknown.png" id="3_isve4"]
[ext_resource type="Script" path="res://Scripts/Characters/Footsteps/FootstepsMaterial.gd" id="3_iwsd6"]
[ext_resource type="AudioStream" uid="uid://dj0g5ou2kwjdo" path="res://Assets/Audio/Steps/Stone/step1.wav" id="4_k3r5c"]
[ext_resource type="Script" path="res://Scripts/Characters/Input/MovingController.gd" id="4_uxnfn"]
[ext_resource type="AudioStream" uid="uid://dkmuhk2sw2bgp" path="res://Assets/Audio/Steps/Stone/step2.wav" id="5_wecrs"]
[ext_resource type="Script" path="res://Scripts/Characters/Input/CameraController.gd" id="6_44uta"]
[ext_resource type="AudioStream" uid="uid://bolbaknxgf3f5" path="res://Assets/Audio/Steps/Stone/step3.wav" id="6_jds36"]
[ext_resource type="AudioStream" uid="uid://df0c8kwt77dtl" path="res://Assets/Audio/Steps/Stone/step4.wav" id="7_jxatl"]
[ext_resource type="AudioStream" uid="uid://cdg2hdxmdliay" path="res://Assets/Audio/Steps/Stone/jump.wav" id="8_dx83o"]
[ext_resource type="AudioStream" uid="uid://bcssl36dq411c" path="res://Assets/Audio/Steps/Stone/land.wav" id="9_lk3i7"]
[ext_resource type="AudioStream" uid="uid://dobewl8nsd2yb" path="res://Assets/Audio/Steps/Wood/step1.wav" id="10_n3ovx"]
[ext_resource type="AudioStream" uid="uid://hvo3g45mmu5t" path="res://Assets/Audio/Steps/Wood/step2.wav" id="11_qhmm3"]
[ext_resource type="AudioStream" uid="uid://cosg11ib1ydks" path="res://Assets/Audio/Steps/Wood/step3.wav" id="12_nfn05"]
[ext_resource type="AudioStream" uid="uid://c8n1shh3dv76g" path="res://Assets/Audio/Steps/Wood/run1.wav" id="13_klbdl"]
[ext_resource type="AudioStream" uid="uid://oio0qwglfwqs" path="res://Assets/Audio/Steps/Wood/run2.wav" id="14_7saf2"]
[ext_resource type="AudioStream" uid="uid://djh7s0us340qp" path="res://Assets/Audio/Steps/Wood/run3.wav" id="15_11ql1"]
[ext_resource type="AudioStream" uid="uid://brerhw37yx57g" path="res://Assets/Audio/Steps/Wood/run4.wav" id="16_00n62"]
[ext_resource type="AudioStream" uid="uid://d2grsqdvupkve" path="res://Assets/Audio/Steps/Wood/jump.wav" id="17_ucrfd"]
[ext_resource type="AudioStream" uid="uid://wrekgdapboyf" path="res://Assets/Audio/Steps/Wood/land.wav" id="18_663t3"]
[ext_resource type="Script" path="res://Scripts/Characters/Footsteps/FloorMaterialRay.gd" id="19_qsvhk"]
[ext_resource type="Script" path="res://Scenes/Prefabs/Player/InteractionNode.gd" id="22_0uvtb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f5c14"]

[sub_resource type="Texture2DRD" id="Texture2DRD_eqof7"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_76kdn")

[node name="InventoryNode" type="Node" parent="." groups=["InventoryNode"]]
script = ExtResource("2_c8atv")
default_inventory_logo = ExtResource("3_isve4")

[node name="DebugLabel" type="Label" parent="InventoryNode"]
offset_right = 402.0
offset_bottom = 59.0

[node name="DebugLabel2" type="Label" parent="InventoryNode"]
offset_top = 71.0
offset_right = 402.0
offset_bottom = 130.0

[node name="ActiveSlot" type="Label" parent="InventoryNode"]
offset_left = 724.0
offset_top = 1049.0
offset_right = 824.0
offset_bottom = 1072.0

[node name="InventoryUI" type="GridContainer" parent="InventoryNode"]
custom_minimum_size = Vector2(50, 50)
offset_left = 723.0
offset_top = 936.0
offset_right = 1239.0
offset_bottom = 1036.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="ColorRect" type="ColorRect" parent="InventoryNode/InventoryUI"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
color = Color(0, 1, 0, 1)

[node name="Sprite" type="Sprite2D" parent="InventoryNode/InventoryUI/ColorRect"]
position = Vector2(50, 50)

[node name="ColorRect2" type="ColorRect" parent="InventoryNode/InventoryUI"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
color = Color(0, 0.572617, 0.0512847, 1)

[node name="Sprite" type="Sprite2D" parent="InventoryNode/InventoryUI/ColorRect2"]
position = Vector2(50, 50)

[node name="ColorRect3" type="ColorRect" parent="InventoryNode/InventoryUI"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
color = Color(0, 0.572617, 0.0512847, 1)

[node name="Sprite" type="Sprite2D" parent="InventoryNode/InventoryUI/ColorRect3"]
position = Vector2(50, 50)

[node name="ColorRect4" type="ColorRect" parent="InventoryNode/InventoryUI"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
color = Color(0, 0.572617, 0.0512847, 1)

[node name="Sprite" type="Sprite2D" parent="InventoryNode/InventoryUI/ColorRect4"]
position = Vector2(50, 50)

[node name="ColorRect5" type="ColorRect" parent="InventoryNode/InventoryUI"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
color = Color(0, 0.572617, 0.0512847, 1)

[node name="Sprite" type="Sprite2D" parent="InventoryNode/InventoryUI/ColorRect5"]
position = Vector2(50, 50)

[node name="MovingController" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("4_uxnfn")
player = NodePath("..")

[node name="InteractionNode" type="Node" parent="."]
script = ExtResource("22_0uvtb")

[node name="Shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_f5c14")

[node name="CameraController" type="Node3D" parent="." node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("6_44uta")
player = NodePath("..")

[node name="InteractRay" type="RayCast3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00240278, -0.033)
target_position = Vector3(0, 0, -3)

[node name="Camera" type="Camera3D" parent="CameraController" groups=["player_cam"]]

[node name="DropMarker" type="Marker3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0164444, -0.743239)

[node name="FootstepsAudio" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.129428, 0)
unit_size = 3.0
max_db = 1.0

[node name="FootstepsHandler" type="Node" parent="FootstepsAudio" node_paths=PackedStringArray("audio_player", "player")]
script = ExtResource("2_bwxk5")
audio_player = NodePath("..")
player = NodePath("../..")

[node name="Stone" type="Node" parent="FootstepsAudio/FootstepsHandler"]
script = ExtResource("3_iwsd6")
walk_variants = Array[AudioStream]([ExtResource("4_k3r5c"), ExtResource("5_wecrs"), ExtResource("6_jds36"), ExtResource("7_jxatl")])
run_variants = Array[AudioStream]([ExtResource("4_k3r5c"), ExtResource("5_wecrs"), ExtResource("6_jds36"), ExtResource("7_jxatl")])
jump_sound = ExtResource("8_dx83o")
land_sound = ExtResource("9_lk3i7")

[node name="Wood" type="Node" parent="FootstepsAudio/FootstepsHandler"]
script = ExtResource("3_iwsd6")
material_enum = 1
walk_variants = Array[AudioStream]([ExtResource("10_n3ovx"), ExtResource("11_qhmm3"), ExtResource("12_nfn05")])
run_variants = Array[AudioStream]([ExtResource("13_klbdl"), ExtResource("14_7saf2"), ExtResource("15_11ql1"), ExtResource("16_00n62")])
jump_sound = ExtResource("17_ucrfd")
land_sound = ExtResource("18_663t3")

[node name="FloorMaterialRay" type="RayCast3D" parent="." node_paths=PackedStringArray("footsteps_handler")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("19_qsvhk")
footsteps_handler = NodePath("../FootstepsAudio/FootstepsHandler")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 960.0
offset_top = 530.0
offset_right = 961.0
offset_bottom = 531.0
texture = SubResource("Texture2DRD_eqof7")

[connection signal="inventory_updated" from="InventoryNode" to="InventoryNode" method="_on_inventory_updated"]
